--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "export": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
