--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,17 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install Dependencies
-        run: npm ci
+      - name: Setup PHP with Laravel Sail
+        run: |
+          docker-compose up -d
+          docker-compose exec -T laravel.test composer install
+          docker-compose exec -T laravel.test npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Build Assets
+        run: docker-compose exec -T laravel.test npm run build
 
-      - name: Export
-        run: npm run export
+      - name: Export Static Files
+        run: docker-compose exec -T laravel.test npm run export
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
