--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
+          php-version: '8.2'  # Changed from 8.4 to 8.2 as 8.4 is not yet stable
           extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql, dom, filter, json
           coverage: none
 
@@ -34,6 +34,9 @@ jobs:
 
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: Update Composer Dependencies
+        run: composer update --no-interaction --no-progress
 
       - name: Install Composer Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
