update grab credentials

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Grab API settings
+GRAB_CLIENT_ID=
+GRAB_CLIENT_SECRET=
+GRAB_REDIRECT_URI="${APP_URL}/auth/grab/callback"
+GRAB_ENVIRONMENT=staging # staging or production
